--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural Project</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app"></div>
-
-    <div class="">
+    <header class="flex justify-between m-5">
+      <div></div>
+      <div>
+        <ul class="flex gap-3">
+          <li>Home</li>
+          <li>About Us</li>
+          <li>Destination</li>
+          <li>Pages</li>
+          <li>Blog</li>
+        </ul>
+      </div>
+    </header>
+    <!-- <section class="">
       <ul class="flex gap-1 m-1">
         <li class=""><img src="images/g/dive.jpg" alt="" /></li>
         <li class=""><img src="images/g/diver.jpg" alt="" /></li>
@@ -18,7 +29,7 @@
         <li class=""><img src="images/g/rock.jpg" alt="" /></li>
         <li class=""><img src="images/g/sea.jpg" alt="" /></li>
       </ul>
-    </div>
+    </section> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
