--- a/index.html
+++ b/index.html
@@ -8,28 +8,66 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="flex justify-between m-5">
-      <div></div>
+    <header class="flex justify-between items-center m-5">
+      <div>
+        <h3 class="text-3xl">logo</h3>
+      </div>
       <div>
         <ul class="flex gap-3">
-          <li>Home</li>
-          <li>About Us</li>
-          <li>Destination</li>
-          <li>Pages</li>
-          <li>Blog</li>
+          <li>
+            <a
+              class="hover:text-cyan-400 hover:transition delay-300 duration-300 ease-in-out"
+              href="#"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a
+              class="hover:text-cyan-400 hover:transition delay-300 duration-300 ease-in-out"
+              href="#"
+              >About Us</a
+            >
+          </li>
+          <li>
+            <a
+              class="hover:text-cyan-400 hover:transition delay-300 duration-300 ease-in-out"
+              href="#"
+              >Destination</a
+            >
+          </li>
+          <li>
+            <a
+              class="hover:text-cyan-400 hover:transition delay-300 duration-300 ease-in-out"
+              href="#"
+              >Pages</a
+            >
+          </li>
+          <li>
+            <a
+              class="hover:text-cyan-400 hover:transition delay-300 duration-300 ease-in-out"
+              href="#"
+              >Blog</a
+            >
+          </li>
         </ul>
       </div>
     </header>
-    <!-- <section class="">
-      <ul class="flex gap-1 m-1">
-        <li class=""><img src="images/g/dive.jpg" alt="" /></li>
-        <li class=""><img src="images/g/diver.jpg" alt="" /></li>
-        <li class=""><img src="images/g/jellyfish.jpg" alt="" /></li>
-        <li class=""><img src="images/g/mountain3.jpg" alt="" /></li>
-        <li class=""><img src="images/g/rock.jpg" alt="" /></li>
-        <li class=""><img src="images/g/sea.jpg" alt="" /></li>
-      </ul>
-    </section> -->
+    <section
+      class="h-screen bg-gradient-to-b from-cyan-200 flex justify-center items-center"
+    >
+      <div class="w-1/2">
+        <h2 class="text-6xl text-center">Adventure Travel Experts</h2>
+      </div>
+      <div class="w-1/2">
+        <ul class="flex flex-wrap gap-1 m-1">
+          <li class=""><img src="images/g/dive.jpg" alt="" /></li>
+          <li class=""><img src="images/g/mountain3.jpg" alt="" /></li>
+          <li class=""><img src="images/g/rock.jpg" alt="" /></li>
+          <li class=""><img src="images/g/sea.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </section>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
