--- a/index.html
+++ b/index.html
@@ -52,19 +52,66 @@
         </ul>
       </div>
     </header>
+
+    <!-- hero section -->
     <section
-      class="h-screen bg-gradient-to-b from-cyan-200 flex justify-center items-center"
+      class="h-screen bg-gradient-to-b from-cyan-200 flex flex-col gap-5 justify-center items-center"
     >
-      <div class="w-1/2">
-        <h2 class="text-6xl text-center">Adventure Travel Experts</h2>
-      </div>
-      <div class="w-1/2">
+      <div class="">
         <ul class="flex flex-wrap gap-1 m-1">
           <li class=""><img src="images/g/dive.jpg" alt="" /></li>
           <li class=""><img src="images/g/mountain3.jpg" alt="" /></li>
+        </ul>
+      </div>
+      <div class="">
+        <h2 class="text-6xl text-center">Adventure Travel Experts</h2>
+      </div>
+
+      <div class="">
+        <ul class="flex flex-wrap gap-1 m-1">
           <li class=""><img src="images/g/rock.jpg" alt="" /></li>
           <li class=""><img src="images/g/sea.jpg" alt="" /></li>
         </ul>
+      </div>
+    </section>
+    <!-- provide section -->
+    <section>
+      <h2>WHAT WE PROVIDE</h2>
+      <div>
+        <h1>TOP VALUES FOR YOU</h1>
+        <img src="" alt="" />
+      </div>
+      <div>
+        <div>
+          <img src="" alt="" />
+          <h3>Lots of Choices</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            laboriosam numquam aliquid consequatur! Id ut molestiae aliquid
+            sapiente quasi assumenda modi, nulla earum asperiores illum, nam,
+            dolorem aperiam nihil expedita!
+          </p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h3>Lots of Choices</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            laboriosam numquam aliquid consequatur! Id ut molestiae aliquid
+            sapiente quasi assumenda modi, nulla earum asperiores illum, nam,
+            dolorem aperiam nihil expedita!
+          </p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h3>Lots of Choices</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            laboriosam numquam aliquid consequatur! Id ut molestiae aliquid
+            sapiente quasi assumenda modi, nulla earum asperiores illum, nam,
+            dolorem aperiam nihil expedita!
+          </p>
+        </div>
       </div>
     </section>
 
