--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
     >
       <div class="">
         <ul class="flex flex-wrap gap-1 m-1">
+          <li class=""><img src="images/g/aurora.jpg" alt="" /></li>
+          <li class=""><img src="images/g/boat.jpg" alt="" /></li>
           <li class=""><img src="images/g/dive.jpg" alt="" /></li>
-          <li class=""><img src="images/g/mountain3.jpg" alt="" /></li>
+          <li class=""><img src="images/g/diver.jpg" alt="" /></li>
         </ul>
       </div>
       <div class="">
@@ -69,8 +71,10 @@
 
       <div class="">
         <ul class="flex flex-wrap gap-1 m-1">
-          <li class=""><img src="images/g/rock.jpg" alt="" /></li>
-          <li class=""><img src="images/g/sea.jpg" alt="" /></li>
+          <li class=""><img src="images/g/flower.jpg" alt="" /></li>
+          <li class=""><img src="images/g/jellyfish.jpg" alt="" /></li>
+          <li class=""><img src="images/g/lighthouse.jpg" alt="" /></li>
+          <li class=""><img src="images/g/mountain2.jpg" alt="" /></li>
         </ul>
       </div>
     </section>
