--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
       class="h-screen bg-gradient-to-b from-cyan-200 flex flex-col gap-5 justify-center items-center"
     >
       <div class="">
-        <ul class="flex flex-wrap gap-1 m-1">
-          <li class=""><img src="images/g/aurora.jpg" alt="" /></li>
-          <li class=""><img src="images/g/boat.jpg" alt="" /></li>
-          <li class=""><img src="images/g/dive.jpg" alt="" /></li>
-          <li class=""><img src="images/g/diver.jpg" alt="" /></li>
+        <ul class="flex gap-1 m-1">
+          <li class=""><img src="images/aurora.jpg" alt="" /></li>
+          <li class=""><img src="images/boat.jpg" alt="" /></li>
+          <li class=""><img src="images/dive.jpg" alt="" /></li>
+          <li class=""><img src="images/diver.jpg" alt="" /></li>
         </ul>
       </div>
       <div class="">
         <h2 class="text-6xl text-center">Adventure Travel Experts</h2>
       </div>
 
-      <div class="">
-        <ul class="flex flex-wrap gap-1 m-1">
-          <li class=""><img src="images/g/flower.jpg" alt="" /></li>
-          <li class=""><img src="images/g/jellyfish.jpg" alt="" /></li>
-          <li class=""><img src="images/g/lighthouse.jpg" alt="" /></li>
-          <li class=""><img src="images/g/mountain2.jpg" alt="" /></li>
+      <div class="overflow-hidden">
+        <ul class="flex gap-5 m-1 animate-marquee">
+          <li class=""><img src="images/flower.jpg" alt="" /></li>
+          <li class=""><img src="images/jellyfish.jpg" alt="" /></li>
+          <li class=""><img src="images/lighthouse.jpg" alt="" /></li>
+          <li class=""><img src="images/mountain2.jpg" alt="" /></li>
         </ul>
       </div>
     </section>
