--- a/index.html
+++ b/index.html
@@ -58,21 +58,30 @@
     </header>
 
     <!-- hero section -->
-    <section
-      class="bg-gradient-to-b from-cyan-200 flex gap-5 justify-center items-center"
-    >
-      <!-- text -->
-      <div class="w-1/2">
-        <h2 class="text-6xl text-center">Adventure Travel Experts</h2>
-      </div>
+    <section class="bg-gradient-to-b from-cyan-200">
       <!-- swiper slider -->
-      <div class="w-1/2 swiper mySwiper">
+      <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="images/boat.jpg" alt="" />
+            <div>
+              <div class="flex justify-center">
+                <h2 class="text-6xl">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Accusamus, aliquam.
+                </h2>
+                <img class="" src="images/boat.jpg" alt="" />
+              </div>
+            </div>
           </div>
           <div class="swiper-slide">
-            <img src="images/lake.jpg" alt="" />
+            <div>
+              <div class="flex justify-center">
+                <h2 class="text-6xl">
+                  Lorem ipsum dolor sit elit. Accusamus, aliquam.
+                </h2>
+                <img class="" src="images/boat.jpg" alt="" />
+              </div>
+            </div>
           </div>
         </div>
         <div class="swiper-button-next"></div>
