--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Natural Project</title>
+    <title>Natural Travel</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -12,12 +12,12 @@
     />
   </head>
   <body>
-    <header class="flex justify-between items-center m-5">
+    <header class="max-w-6xl w-full mx-auto flex justify-between items-center">
       <div>
-        <h3 class="text-3xl">logo</h3>
+        <img class="w-32 p-2" src="./images/nt-logo.png" alt="" />
       </div>
       <div>
-        <ul class="flex gap-3">
+        <ul class="flex gap-2 space-x-8 mr-10 text-xl">
           <li>
             <a
               class="hover:text-cyan-400 hover:transition delay-300 duration-300 ease-in-out"
@@ -57,9 +57,8 @@
       </div>
     </header>
 
-    <!-- hero section -->
-    <section class="bg-gradient-to-b from-cyan-200">
-      <!-- swiper slider -->
+    <!-- swiper slider -->
+    <section>
       <div class="swiper mySwiper">
         <div
           class="parallax-bg"
@@ -68,49 +67,85 @@
         ></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <div class="title" data-swiper-parallax="-300">Slide 1</div>
-            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-            <div class="text" data-swiper-parallax="-100">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                laoreet justo vitae porttitor porttitor. Suspendisse in sem
-                justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh
-                euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                tincidunt ut libero. Aenean feugiat non eros quis feugiat.
-              </p>
+            <div class="text-container">
+              <div
+                class="title text-3xl font-bold text-emerald-600"
+                data-swiper-parallax="-300"
+              >
+                New World Explore
+              </div>
+              <div
+                class="subtitle text-6xl font-bold max-w-lg my-5"
+                data-swiper-parallax="-200"
+              >
+                Finally a peaceful journey!
+              </div>
+              <div
+                class="text text-2xl text-slate-300"
+                data-swiper-parallax="-100"
+              >
+                <p>Experience new nature</p>
+              </div>
             </div>
+            <button
+              class="text-white bg-emerald-600 hover:bg-orange-500 transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+            >
+              Explore Now
+            </button>
           </div>
           <div class="swiper-slide">
-            <div class="title" data-swiper-parallax="-300">Slide 2</div>
-            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-            <div class="text" data-swiper-parallax="-100">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                laoreet justo vitae porttitor porttitor. Suspendisse in sem
-                justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh
-                euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                tincidunt ut libero. Aenean feugiat non eros quis feugiat.
-              </p>
+            <div class="text-container">
+              <div
+                class="title text-3xl font-bold text-emerald-600"
+                data-swiper-parallax="-300"
+              >
+                New World Explore
+              </div>
+              <div
+                class="subtitle text-6xl font-bold max-w-lg my-5"
+                data-swiper-parallax="-200"
+              >
+                Finally a peaceful journey!
+              </div>
+              <div
+                class="text text-2xl text-slate-300"
+                data-swiper-parallax="-100"
+              >
+                <p>Experience new nature</p>
+              </div>
             </div>
+            <button
+              class="text-white bg-emerald-600 hover:bg-orange-500 transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+            >
+              Explore Now
+            </button>
           </div>
           <div class="swiper-slide">
-            <div class="title" data-swiper-parallax="-300">Slide 3</div>
-            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-            <div class="text" data-swiper-parallax="-100">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                laoreet justo vitae porttitor porttitor. Suspendisse in sem
-                justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh
-                euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                tincidunt ut libero. Aenean feugiat non eros quis feugiat.
-              </p>
+            <div class="text-container">
+              <div
+                class="title text-3xl font-bold text-emerald-600"
+                data-swiper-parallax="-300"
+              >
+                New World Explore
+              </div>
+              <div
+                class="subtitle text-6xl font-bold max-w-lg my-5"
+                data-swiper-parallax="-200"
+              >
+                Finally a peaceful journey!
+              </div>
+              <div
+                class="text text-2xl text-slate-300"
+                data-swiper-parallax="-100"
+              >
+                <p>Experience new nature</p>
+              </div>
             </div>
+            <button
+              class="text-white bg-emerald-600 hover:bg-orange-500 transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+            >
+              Explore Now
+            </button>
           </div>
         </div>
         <div class="swiper-button-next"></div>
@@ -119,7 +154,7 @@
       </div>
     </section>
     <!-- provide section -->
-    <section>
+    <section class="bg-gradient-to-b from-teal-200">
       <h2>WHAT WE PROVIDE</h2>
       <div>
         <h1>TOP VALUES FOR YOU</h1>
@@ -169,6 +204,7 @@
       var swiper = new Swiper(".mySwiper", {
         speed: 600,
         parallax: true,
+        // autoplay: true,
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
