responsive nav start

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural Travel</title>
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="max-w-6xl w-full mx-auto flex justify-between items-center">
@@ -17,7 +21,7 @@
         <img class="w-32 p-2" src="./images/nt-logo.png" alt="" />
       </div>
       <div>
-        <ul class="flex gap-2 space-x-8 mr-10 text-xl">
+        <ul class="flex gap-2 space-x-8 mr-10 text-xl topnav" id="myTopnav">
           <li>
             <a
               class="hover:text-cyan-400 hover:transition delay-300 duration-300 ease-in-out"
@@ -52,6 +56,11 @@
               href="#"
               >Blog</a
             >
+          </li>
+          <li>
+            <a href="javascript:void(0)" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
           </li>
         </ul>
       </div>
