nav mobile done

--- a/index.html
+++ b/index.html
@@ -21,14 +21,24 @@
         <img class="w-32 p-2" src="./images/nt-logo.png" alt="logo" />
       </div>
 
-      <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
+      <div class="nav">
+        <input type="checkbox" id="nav-check" />
+        <div class="nav-header"></div>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+
+        <div class="nav-links">
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Destination</a>
+          <a href="#">Pages</a>
+          <a href="#">Blog</a>
+        </div>
       </div>
     </header>
 
@@ -190,16 +200,7 @@
         },
       });
     </script>
+
     <!-- navbar -->
-    <script>
-      function myFunction() {
-        let x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-          x.className += " responsive";
-        } else {
-          x.className = "topnav";
-        }
-      }
-    </script>
   </body>
 </html>
