color setup, nav done.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div>
 
         <div class="nav-links">
-          <a href="#">Home</a>
-          <a href="#">About Us</a>
-          <a href="#">Destination</a>
-          <a href="#">Pages</a>
-          <a href="#">Blog</a>
+          <a class="underline-hover" href="#">Home</a>
+          <a class="underline-hover" href="#">About Us</a>
+          <a class="underline-hover" href="#">Destination</a>
+          <a class="underline-hover" href="#">Pages</a>
+          <a class="underline-hover" href="#">Blog</a>
         </div>
       </div>
     </header>
