home form start

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/nt-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural Travel</title>
     <link
@@ -18,7 +18,7 @@
   <body>
     <header class="max-w-6xl w-full mx-auto flex justify-between items-center">
       <div>
-        <img class="w-32 p-2" src="./images/nt-logo.png" alt="logo" />
+        <img class="w-44 p-1" src="./images/nt-logo.png" alt="logo" />
       </div>
 
       <div class="nav">
@@ -136,6 +136,140 @@
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
+      </div>
+    </section>
+
+    <!-- form section -->
+    <section class="max-w-6xl w-full mx-auto my-5">
+      <div role="tablist" class="tabs tabs-lifted">
+        <input
+          type="radio"
+          name="my_tabs_2"
+          role="tab"
+          class="tab"
+          aria-label="Hotels"
+          checked
+        />
+        <div
+          role="tabpanel"
+          class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+        >
+          <div class="">
+            <form
+              class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            >
+              <div class="flex space-x-4 mb-4">
+                <div class="w-1/5">
+                  <label
+                    class="block text-gray-700 font-bold mb-2"
+                    for="destination"
+                  >
+                    Destination
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="destination"
+                    type="text"
+                    placeholder="Enter destination"
+                  />
+                </div>
+                <div class="w-1/5">
+                  <label
+                    class="block text-gray-700 font-bold mb-2"
+                    for="check-in"
+                  >
+                    Check In
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="check-in"
+                    type="date"
+                  />
+                </div>
+                <div class="w-1/5">
+                  <label
+                    class="block text-gray-700 font-bold mb-2"
+                    for="check-out"
+                  >
+                    Check Out
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="check-out"
+                    type="date"
+                  />
+                </div>
+                <div class="w-1/5">
+                  <label
+                    class="block text-gray-700 font-bold mb-2"
+                    for="adults"
+                  >
+                    Adults
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="adults"
+                    type="number"
+                    min="1"
+                    placeholder="Enter number of adults"
+                  />
+                </div>
+                <div class="w-1/5">
+                  <label
+                    class="block text-gray-700 font-bold mb-2"
+                    for="children"
+                  >
+                    Children
+                  </label>
+                  <input
+                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="children"
+                    type="number"
+                    min="0"
+                    placeholder="Enter number of children"
+                  />
+                </div>
+              </div>
+
+              <div class="flex items-center justify-between">
+                <button
+                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                  type="button"
+                >
+                  Search
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <input
+          type="radio"
+          name="my_tabs_2"
+          role="tab"
+          class="tab"
+          aria-label="Tab 2"
+        />
+        <div
+          role="tabpanel"
+          class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+        >
+          Tab content 2
+        </div>
+
+        <input
+          type="radio"
+          name="my_tabs_2"
+          role="tab"
+          class="tab"
+          aria-label="Tab 3"
+        />
+        <div
+          role="tabpanel"
+          class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+        >
+          Tab content 3
+        </div>
       </div>
     </section>
     <!-- provide section -->
