--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
           aria-label="Hotels"
           checked
         />
+
         <div
           role="tabpanel"
           class="tab-content bg-base-100 border-base-300 rounded-box p-6"
@@ -170,7 +171,7 @@
                     class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                     id="destination"
                     type="text"
-                    placeholder="Enter destination"
+                    placeholder=""
                   />
                 </div>
                 <div class="w-1/5">
@@ -211,7 +212,7 @@
                     id="adults"
                     type="number"
                     min="1"
-                    placeholder="Enter number of adults"
+                    placeholder="1"
                   />
                 </div>
                 <div class="w-1/5">
@@ -226,7 +227,7 @@
                     id="children"
                     type="number"
                     min="0"
-                    placeholder="Enter number of children"
+                    placeholder=""
                   />
                 </div>
               </div>
@@ -242,7 +243,6 @@
             </form>
           </div>
         </div>
-
         <input
           type="radio"
           name="my_tabs_2"
@@ -334,7 +334,10 @@
         },
       });
     </script>
-
+    <script
+      src="https://kit.fontawesome.com/c5b8b41db0.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- navbar -->
   </body>
 </html>
