--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <!-- form section -->
     <section class="max-w-6xl w-full mx-auto my-5">
-      <div role="tablist" class="tabs tabs-lifted">
+      <div role="tablist" class="tabs tabs-lifted grid grid-cols-6">
         <input
           type="radio"
           name="my_tabs_2"
@@ -155,106 +155,182 @@
           role="tabpanel"
           class="tab-content bg-base-100 border-base-300 rounded-box p-6"
         >
-          <div class="">
-            <form
-              class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
-            >
-              <div class="flex space-x-4 mb-4">
-                <div class="w-1/5">
-                  <label
-                    class="block text-gray-700 font-bold mb-2"
-                    for="destination"
-                  >
-                    Destination
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="destination"
-                    type="text"
-                    placeholder=""
-                  />
-                </div>
-                <div class="w-1/5">
-                  <label
-                    class="block text-gray-700 font-bold mb-2"
-                    for="check-in"
-                  >
-                    Check In
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="check-in"
-                    type="date"
-                  />
-                </div>
-                <div class="w-1/5">
-                  <label
-                    class="block text-gray-700 font-bold mb-2"
-                    for="check-out"
-                  >
-                    Check Out
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="check-out"
-                    type="date"
-                  />
-                </div>
-                <div class="w-1/5">
-                  <label
-                    class="block text-gray-700 font-bold mb-2"
-                    for="adults"
-                  >
-                    Adults
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="adults"
-                    type="number"
-                    min="1"
-                    placeholder="1"
-                  />
-                </div>
-                <div class="w-1/5">
-                  <label
-                    class="block text-gray-700 font-bold mb-2"
-                    for="children"
-                  >
-                    Children
-                  </label>
-                  <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="children"
-                    type="number"
-                    min="0"
-                    placeholder=""
-                  />
-                </div>
-              </div>
-
-              <div class="flex items-center justify-between">
-                <button
-                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                  type="button"
+          <form
+            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+          >
+            <div class="flex space-x-4 mb-4">
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="destination"
                 >
-                  Search
-                </button>
+                  Destination
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="destination"
+                  type="text"
+                  placeholder=""
+                />
               </div>
-            </form>
-          </div>
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="check-in"
+                >
+                  Check In
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="check-in"
+                  type="date"
+                />
+              </div>
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="check-out"
+                >
+                  Check Out
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="check-out"
+                  type="date"
+                />
+              </div>
+              <div class="w-1/5">
+                <label class="block text-gray-700 font-bold mb-2" for="adults">
+                  Adults
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="adults"
+                  type="number"
+                  min="1"
+                  placeholder="1"
+                />
+              </div>
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="children"
+                >
+                  Children
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="children"
+                  type="number"
+                  min="0"
+                  placeholder=""
+                />
+              </div>
+            </div>
+
+            <div class="flex items-center justify-center">
+              <button
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="button"
+              >
+                Search
+              </button>
+            </div>
+          </form>
         </div>
         <input
           type="radio"
           name="my_tabs_2"
           role="tab"
           class="tab"
-          aria-label="Tab 2"
+          aria-label="Rentals"
         />
         <div
           role="tabpanel"
           class="tab-content bg-base-100 border-base-300 rounded-box p-6"
         >
-          Tab content 2
+          <form
+            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+          >
+            <div class="flex space-x-4 mb-4">
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="destination"
+                >
+                  Destination
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="destination"
+                  type="text"
+                  placeholder=""
+                />
+              </div>
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="check-in"
+                >
+                  Check In
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="check-in"
+                  type="date"
+                />
+              </div>
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="check-out"
+                >
+                  Check Out
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="check-out"
+                  type="date"
+                />
+              </div>
+              <div class="w-1/5">
+                <label class="block text-gray-700 font-bold mb-2" for="adults">
+                  Adults
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="adults"
+                  type="number"
+                  min="1"
+                  placeholder="1"
+                />
+              </div>
+              <div class="w-1/5">
+                <label
+                  class="block text-gray-700 font-bold mb-2"
+                  for="children"
+                >
+                  Children
+                </label>
+                <input
+                  class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                  id="children"
+                  type="number"
+                  min="0"
+                  placeholder=""
+                />
+              </div>
+            </div>
+
+            <div class="flex items-center justify-between">
+              <button
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="button"
+              >
+                Search
+              </button>
+            </div>
+          </form>
         </div>
 
         <input
@@ -262,7 +338,7 @@
           name="my_tabs_2"
           role="tab"
           class="tab"
-          aria-label="Tab 3"
+          aria-label="Flights"
         />
         <div
           role="tabpanel"
