--- a/index.html
+++ b/index.html
@@ -153,13 +153,15 @@
 
         <div
           role="tabpanel"
-          class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+          class="tab-content bg-custom-color-1 border-base-300 rounded-box p-6"
         >
           <form
             class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
-            <div class="flex space-x-4 mb-4">
-              <div class="w-1/5">
+            <div
+              class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
+            >
+              <div class="w-full md:w-1/5">
                 <label
                   class="block text-gray-700 font-bold mb-2"
                   for="destination"
@@ -173,7 +175,7 @@
                   placeholder=""
                 />
               </div>
-              <div class="w-1/5">
+              <div class="w-full md:w-1/5">
                 <label
                   class="block text-gray-700 font-bold mb-2"
                   for="check-in"
@@ -186,7 +188,7 @@
                   type="date"
                 />
               </div>
-              <div class="w-1/5">
+              <div class="w-full md:w-1/5">
                 <label
                   class="block text-gray-700 font-bold mb-2"
                   for="check-out"
@@ -199,7 +201,7 @@
                   type="date"
                 />
               </div>
-              <div class="w-1/5">
+              <div class="w-full md:w-1/5">
                 <label class="block text-gray-700 font-bold mb-2" for="adults">
                   Adults
                 </label>
@@ -211,7 +213,7 @@
                   placeholder="1"
                 />
               </div>
-              <div class="w-1/5">
+              <div class="w-full md:w-1/5">
                 <label
                   class="block text-gray-700 font-bold mb-2"
                   for="children"
